Wed Sep 24 16:10:37 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Detect AC_OUTPUT().
	(handle_single_transform_list): Don't apply length() to a list.

	* automake.in (handle_programs): Define _DEPENDENCIES variable if
	not defined by user.

Thu Sep 18 19:43:38 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/sanity.m4: Quote "$@" for m4.  From Gord Matzigkeit.

Mon Sep  1 23:50:38 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Set need_texi_file only when
	TEXINFO_TEX not defined.

Thu Aug 28 09:37:29 1997  Tom Tromey  <tromey@cygnus.com>

	From Juergen Erhard:
	* automake.in (SUFFIX_RULE_PATTERN): New global.
	(handle_single_transform_list): If suffix matches a source suffix,
	rewrite.
	(read_am_file): Add suffix rules to %suffix_rules.
	(initialize_per_input): Initialize %suffix_rules.

Wed Aug 27 12:56:50 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Also remove .kys and .ps files.

	* automake.in (handle_yacc_lex_cxx): Quoting fixlet.  From Kaveh
	Ghazi.

	* aclocal.in (write_aclocal): Print copyright and copying
	permissions.  From RMS.
	* automake.in (initialize_global_constants): More copyright stuff
	from RMS.

	* automake.in (handle_texinfo): Only require texinfo.tex in
	appropriate situations.  Report from Paul D. Smith.

Mon Aug 25 15:45:52 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_dependency_file): Fix so that
	OMIT_DEPENDENCIES will work.  From Alexander Lukyanov.

	* automake.in (handle_texinfo): texi2dvi can generate `.cn'
	files.  From Akim Demaille.

Wed Aug  6 10:51:37 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Reversed sense of test.

Tue Aug  5 17:49:54 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dependencies): Always mark OMIT_DEPENDENCIES
	as seen.

	* automake.in (handle_yacc_lex_cxx): Make each _.c file depend on
	ansi2knr.

	* automake.in (handle_yacc_lex_cxx): Fix for makes which don't