@@ -1,5 +1,8 @@
 Wed Sep 24 16:10:37 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_yacc_lex_cxx): Handle de-ansi-fied sources
+	in srcdir as well as build dir.
+
 	* automake.in (scan_one_configure_file): Detect AC_OUTPUT().
 	(handle_single_transform_list): Don't apply length() to a list.
 
